<resources>
    <string name="app_name">VortexDictionary</string>

    <string name="create_fab_content_desc">Добавить новое слово</string>
    <string name="save_fab_content_desc">Сохранить слово</string>
    <string name="translate_fab_content_desc">Перевести слово</string>
    <string name="random_fab_content_desc">Случайное слово</string>

    <string name="no_word_english_error">Введите слово</string>
    <string name="no_word_russian_error">Введите перевод</string>

    <string name="nav_open">Открыть</string>
    <string name="nav_close">Закрыть</string>

    <string name="nav_header_subtitle">Изучайте английский просто!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Словарь Vortex</string>

    <string name="search_item">Поиск</string>

    <string name="reset_button">Сбросить состояние приложения</string>

    <string name="card_item">Карточки</string>
    <string name="dictionary_item">Словарь</string>
    <string name="settings_item">Настройки</string>
    <string name="add_new_word_label">Добавить новое слово</string>

    <string name="button_decline_label">Нет, спасибо</string>
    <string name="button_accept_label">Купить</string>
    <string name="subscription_description">Откройте возможность неограниченного добавления слов в словарь и просмотра переводов всего за </string>

    <string name="input_hint_english">Введите слово на английском</string>
    <string name="input_hint_russian">Введите слово на русском</string>

    <string name="sort_by">Сортировка</string>
    <string name="list_sort">Список</string>
    <string name="sort_by_date">Дата добавления</string>
    <string name="sort_by_russian">Кириллица</string>
    <string name="sort_by_english">Латиница</string>
    <string name="sort_by_ascended">По возрастанию</string>
    <string name="sort_by_descended">По убыванию</string>
</resources>